feat & fix & refactor: combine three changes
auto create the database
fix the null repository in FoodServiceImpl
use List.of() to create immutable lists